--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -594,6 +594,7 @@
                         color: #252525;
                         font-weight: 900;
                     }
+
                     .subtitulo_experiencia {
                         height: 5em;
                         display: flex;
@@ -815,41 +816,216 @@
 
         /* #####################   SECTION SEIS ############################# */
 
-        .conten_anima_3d{
-            position:relative;
-            .bandera {
-                display: flex;
-                width: 100vw;
-                height: 100vh;
-                position: relative;
-    
-    
-                .titulo_bandera {
-                    width: 50%;
-    
-                    position: absolute;
-                    margin-left: 1.5em;
-                    text-align: start;
-                    color: #000;
-                    font-family: Sora;
-                    font-size: 50px;
-                    font-style: normal;
-                    font-weight: 900;
-                    line-height: 115.5%;
-                    /* 103.95px */
-                    text-transform: capitalize;
-                    z-index: 2;
-                }
-    
-            }
-            .cont_figure_geometric_uno{
-                position:absolute;
+        .conten_anima_3d {
+
+            position: relative;
+
+            .cont_figure_geometric_uno {
+                position: absolute;
                 z-index: 100;
                 width: 250px;
                 height: 250px;
                 left: 5em;
                 top: 5em;
             }
+            
+            .bandera {
+                display: flex;
+                width: 100vw;
+                height: 100vh;
+                justify-content: center;
+                align-items: center;
+                .titulo_bandera {
+                    margin-left: 2em;
+                    margin-right: 2em;
+                    position: absolute;
+                    color:#000000;
+                    text-align: center;
+                    font-family: Sora;
+                    font-size: 80px;
+                    font-style: normal;
+                    font-weight: 900;
+                    line-height: 115.5%;
+                    text-transform: uppercase;
+                }
+
+            }
+            .mis_servicios {
+                display: flex;
+                flex-direction: column;
+                margin: 10em 5em 5em 5em;
+                gap: 5em;
+    
+                .cont_titulo_mis_servicios {
+                    display: inline-flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    gap: 5px;
+    
+                    .titulo {
+                        color: #000;
+                        font-family: Sora;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 122%;
+                        letter-spacing: 0.75px;
+                        text-transform: capitalize;
+                    }
+    
+                    .cont_subtitulo_mis_servicios {
+                        display: flex;
+                        gap: 60px;
+                        align-items: flex-end;
+    
+                        .subtitulo_aboutme {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 80px;
+                            font-style: normal;
+                            font-weight: 800;
+                            line-height: 115.5%;
+                            /* 103.95px */
+                            text-transform: capitalize;
+                        }
+    
+                        .context_subtitulo {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 300;
+                            line-height: 138.5%;
+                            /* 20.775px */
+                            text-transform: capitalize;
+                        }
+    
+                        .etiqueta {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 138.5%;
+                            /* 20.775px */
+                            text-transform: capitalize;
+                            white-space: nowrap;
+                        }
+                    }
+                }
+    
+                .cont_lista_mis_servicios {
+                    display: flex;
+                    flex-direction: column;
+    
+                    .cont_item_mis_servicios {
+                        display: flex;
+                        padding: 15px 0px;
+                        justify-content: space-between;
+                        align-items: flex-start;
+                        align-self: stretch;
+                        border-bottom: 0.5px solid #b1b1b1;
+    
+                        h4 {
+                            color: #818181;
+                            font-family: Sora;
+                            font-size: 50px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 136%;
+                            /* 68px */
+                            text-transform: uppercase;
+                        }
+    
+                        .subtitulo_experiencia {
+                            height: 5em;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: start;
+                            justify-content: center;
+    
+                            .titulo {
+                                color: #818181;
+                                font-family: Sora;
+                                font-size: 20px;
+                                font-style: normal;
+                                font-weight: 400;
+                                line-height: 136%;
+                                /* 27.2px */
+                                text-transform: capitalize;
+                            }
+    
+                            .fecha {
+                                color: #818181;
+                                font-family: Sora;
+                                font-size: 14px;
+                                font-style: normal;
+                                font-weight: 100;
+                                line-height: 136%;
+                                /* 19.04px */
+                                text-transform: uppercase;
+                            }
+                        }
+    
+                        p {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 14px;
+                            font-style: normal;
+                            font-weight: 300;
+                            line-height: 107.5%;
+                            /* 15.05px */
+                        }
+                    }
+    
+                    .cont_item_mis_servicios:hover {
+                        border-bottom: 1px solid #000000;
+    
+                        h4 {
+                            color: #252525;
+                            font-weight: 900;
+                        }
+    
+                        .subtitulo_experiencia {
+                            height: 5em;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: start;
+                            justify-content: center;
+    
+                            .titulo {
+                                color: #000;
+                                font-family: Sora;
+                                font-size: 20px;
+                                font-style: normal;
+                                font-weight: 400;
+                                line-height: 136%;
+                                /* 27.2px */
+                                text-transform: capitalize;
+                            }
+    
+                            .fecha {
+                                color: #000;
+                                font-family: Sora;
+                                font-size: 14px;
+                                font-style: normal;
+                                font-weight: 100;
+                                line-height: 136%;
+                                /* 19.04px */
+                                text-transform: uppercase;
+                            }
+                        }
+    
+                        p {
+                            font-weight: 500;
+                        }
+                    }
+    
+                }
+    
+            }
+
+            
 
         }
 
